@@ -19,15 +19,16 @@ sub new {
         %args = @args;
     }
     $self->{consul_server} = $args{consul_server} || 'localhost';
-    $self->{kvPrefix} = $args{kvPrefix} || '/';
-    $self->{kvPrefix} =~ s/\/\//\//g;
-    $self->{kvPrefix} =~ s/\/\//\//g;
-    $self->{kvPrefix} =~ s/\/\//\//g;
-    if($self->{kvPrefix} !~ /^\//) {
-        $self->{kvPrefix} = '/' . $self->{kvPrefix};
+    $args{kv_prefix} = $args{kvPrefix} if $args{kvPrefix};
+    $self->{kv_prefix} = $args{kv_prefix} || '/';
+    $self->{kv_prefix} =~ s/\/\//\//g;
+    $self->{kv_prefix} =~ s/\/\//\//g;
+    $self->{kv_prefix} =~ s/\/\//\//g;
+    if($self->{kv_prefix} !~ /^\//) {
+        $self->{kv_prefix} = '/' . $self->{kv_prefix};
     }
-    if($self->{kvPrefix} !~ /\/$/) {
-        $self->{kvPrefix} = $self->{kvPrefix} . '/';
+    if($self->{kv_prefix} !~ /\/$/) {
+        $self->{kv_prefix} = $self->{kv_prefix} . '/';
     }
     {   my %ua_args = ();
         $ua_args{ssl_opts} = $args{ssl_opts} if $args{ssl_opts};
@@ -138,7 +139,7 @@ sub KVPut {
 sub _mk_kv_url {
     my $self = shift;
     my $key = shift;
-    return $self->{proto} . '://' . $self->{consul_server} . ':' . $self->{consul_port} . '/v1/kv' . $self->{kvPrefix} . $key;
+    return $self->{proto} . '://' . $self->{consul_server} . ':' . $self->{consul_port} . '/v1/kv' . $self->{kv_prefix} . $key;
 }
 
 sub KVDelete {
@@ -222,7 +223,7 @@ fail.
 
 =over 4
 
-=item kvPrefix (optional)
+=item kv_prefix (optional)
 
 Adds this prefix to all key/value operations, essentially giving you a
 'namespace' inside of Consul, for the life of this object.  Defaults to
@@ -265,7 +266,7 @@ This calls the Consul HTTP PUT method to set a value in the key/value store.
 
 =item key (required)
 
-This is the key, optionally prefixed by kvPrefix in the constructor.  No
+This is the key, optionally prefixed by kv_prefix in the constructor.  No
 encoding is done; this is passed to Consul as is.
 
 =item value (required)
@@ -286,7 +287,7 @@ The data that was previous PUT is found in the Value field of each record.
 
 =item key (required)
 
-This is the key, optionally prefixed by kvPrefix in the constructor.  No
+This is the key, optionally prefixed by kv_prefix in the constructor.  No
 encoding is done; this is passed to Consul as is.
 
 =item recurse (optional)
@@ -305,10 +306,10 @@ from the key/value store.
 
 =item key (required)
 
-This is the key, optionally prefixed by kvPrefix in the constructor.  No
+This is the key, optionally prefixed by kv_prefix in the constructor.  No
 encoding is done; this is passed to Consul as is.
 
-=item recurse (optional) ##unimplemented
+=item recurse (optional)
 
 Causes the ?recurse flag to be sent along, which will cause Consul to delete
 all of the records 'below' the passed key.
