@@ -1,4 +1,5 @@
-{{$NEXT}}
+{{$NEXT}} Wed Aug 27 18:01:57 PDT 2014
+    - Added recursive delete functionality
 
 0.1 Mon Aug 25 21:42:14 PDT 2014
     - First release
